--- a/docs/interaction-studio/mcp-serverside-code-basics.mdx
+++ b/docs/interaction-studio/mcp-serverside-code-basics.mdx
@@ -162,6 +162,6 @@ Here, I want to share a few of my favourite sources focusing on MCP Serverside C
 1. My [MCP Campaign Templates and code snippets](../../category/mc-personalization-snippets/)
 2. Official [GitHub repository](https://github.com/evergage/evergage-global-templates/) with Global Templates
 3. Christoper's Long [GitHub repository](https://github.com/christopher-longSFDC/mcp/) with Complex Templates
-4. Salesforce Japan [Template Catalog](https://github.com/christopher-longSFDC/mcp/) with Web Campaigns
+4. Salesforce Japan [Template Catalog](https://is-template-guide.herokuapp.com/en/) with Web Campaigns
 
 Found other inspiring MCP Serverside Code examples? Let me know!
