Small content updates to SFMC Hands-on FAQ

--- a/sites/faq/how-to-get-sfmc-hands-on-experience.mdx
+++ b/sites/faq/how-to-get-sfmc-hands-on-experience.mdx
@@ -45,11 +45,11 @@ If you want something free, some community-driven bootcamps offer temporary acce
 
 ## Access through HandsOnSFMC
 
-Last full-access option I'm aware of is delivered by the fabulous [Tim Ziter](https://www.linkedin.com/in/tim-ziter-92589bb) through his [knowledge-packed HandsOnSFMC website](https://handsonsfmc.com/contact/). It's a weekly event with an hour window for building stuff directly on the SFMC platform.
+Last (but definitely not least) full-access option I'm aware of is delivered by the fabulous [Tim Ziter](https://www.linkedin.com/in/tim-ziter-92589bb) through his [knowledge-packed HandsOnSFMC website](https://handsonsfmc.com/contact/). It's a weekly event focused on building stuff directly on the SFMC platform. Short term access to Marketing Cloud included.
 
 ## Limited access through MCSnippets
 
-Yet another free option is offered by the Salesforce MVP [Pato Sapir](https://www.linkedin.com/in/patosapir). This one, however, is not full-blown access to the Marketing Cloud, but rather a set of web apps ([MC Snippets app for AMPScript and SSJS](https://mcsnippets.herokuapp.com) and [MC Snippetzs app for SQL](https://mcsnippets.herokuapp.com/sql)) that provides option to write proprietary code on the SFMC Platform. Perfect for polishing your dev skills and preparing for Salesforce Marketing Cloud Developer certification.
+Yet another free option is offered by the Salesforce MVP [Pato Sapir](https://www.linkedin.com/in/patosapir). This one, however, is not full-blown access to the Marketing Cloud, but rather a set of web apps ([MC Snippets for AMPScript and SSJS](https://mcsnippets.herokuapp.com) and [MC Snippets for SQL](https://mcsnippets.herokuapp.com/sql)) that provides option to write proprietary code on the SFMC Platform. Perfect for polishing your dev skills and preparing for Salesforce Marketing Cloud Developer certification.
 
 ## What else for beginners?
 
