Additional options to SFMC Hands-on FAQ

--- a/sites/faq/how-to-get-sfmc-hands-on-experience.mdx
+++ b/sites/faq/how-to-get-sfmc-hands-on-experience.mdx
@@ -25,7 +25,7 @@ This is probably not the answer you are looking for, but the easiest way to get 
 
 ### 1. Any company that bought Salesforce Marketing Cloud
 
-This one is straightforward. If the company has a licence, you can try to get access to it to learn and play. However, due to compliance, security and user licence limits, it might be hard if you are outside the digital marketing/marketing automation team. An excellent option here is to look for a nonprofit organisation using Marketing Cloud and offer them your support for free—knowledge for you and tasks done for the Nonprofit.
+This one is straightforward. If the company has a licence, you can try to get access to it to learn and play. However, due to compliance, security and user licence limits, it might be hard if you are outside the digital marketing/marketing automation team. An excellent option here is to look for a nonprofit organisation using Marketing Cloud and offer them your support for free. Knowledge for you and tasks done for the Nonprofit. There are also internships available in the ecosystem.
 
 ### 2. Salesforce Marketing Cloud Consulting Partner
 
@@ -35,9 +35,17 @@ Registered Salesforce Consulting Partners can request a [special non-production 
 
 That [special non-production account](https://help.salesforce.com/s/articleView?id=000390865&type=1) is also available to Salesforce ISV (Independent Software Vendor) Partners. However, they must prove that they are building a Marketing Cloud AppExchange app to be eligible for one.
 
+## Access through Mentor
+
+While the official Salesforce Mentorship program is no longer live, there are still people in the ecosystem that offer their mentorship - and in some cases they are able to provide an access to SFMC as well if their company allows that.
+
 ## Access through Trailhead Academy
 
 In 2023, Salesforce added another - more available but paywalled - option to the Trailhead Academy. It offers a 6-weeks-long [Virtual Bootcamp for Salesforce Marketing Cloud](https://trailheadacademy.salesforce.com/classes/tvb301-trailblazer-virtual-bootcamp-for-new-marketers) with hands-on experience on the platform as a part of the course. Multiple languages are available, and the price for the English one is $225 (it varies based on the language, so be sure to check the planned classes for the cost to you).
+
+## Access through SuperMums
+
+There is also much pricier, unofficial but fuller option: [SuperMums SFMC Bootcamp](https://supermums.org/training/salesforce-marketing-cloud-course/). For £2400 you are getting a 7-weeks live course with 4-weeks access to the platform that hopes to prepare you fully for your first Marketing Cloud job.
 
 ## Access through Trailblazer Community
 
